<resources>
    <string name="app_name">Fix It Core</string>
    <string name="data_access_activity_name">Fix It Data</string>

    <!-- Data Types -->
    <string name="map_areas">Map Areas</string>

    <string name="error_unknown">Unknown error, please try again.</string>
    <string name="error_default_display_msg">We apologize for any inconveniences but an unexpected error has occurred :(</string>
    <string name="error_no_network_msg">Please check your internet connection and try again!</string>
    <string name="error_server_unavailable">Server is currently under maintenance, please try again later.</string>

    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait</string>

    <string name="no_internet_browser">Could not find an internet browser application on device.</string>

    <string name="report_error">Report Error</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="mobile_networks">Mobile Networks</string>
    <string name="continue_">Continue</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="question_exit_without_login">You will not be able to continue your order without completing sign in or registration, are you sure you want to go back?</string>

    <string name="empty_list">Nothing to show</string>
    <string name="closed_today">Closed Today</string>
    <string name="close">Close</string>

    <string name="verification_message_body">Your verification code for Fix It is: %1$d</string>
    <string name="invalid_telephone">Telephone Number is invalid.</string>
    <string name="invalid_mobile_number">Invalid Mobile number, make sure this is not a landline number!</string>
    <string name="telephone_unreachable">Telephone number is unreachable.</string>
    <string name="from_number_blacklisted">You have black listed us, please SMS \"START\" to %1$s and try again</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="complete">Complete</string>

    <string name="copied_format">Copied %1$s</string>

</resources>
