<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack_DD"
    android:clickable="true"
    android:padding="@dimen/error_fragment_padding">

    <TextView
        android:id="@+id/tv_display_msg"
        style="@style/errorFragmentText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/error_fragment_item_spacing"
        app:layout_constraintBottom_toTopOf="@+id/vertical_center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/error_default_display_msg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/error_fragment_item_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vertical_center_guideline">

        <Button
            android:id="@+id/btn_report_error"
            style="@style/errorFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/error_fragment_item_spacing"
            android:text="@string/report_error" />

        <Button
            android:id="@+id/btn_wifi_settings"
            style="@style/errorFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/error_fragment_item_spacing"
            android:text="@string/wifi_settings" />

        <Button
            android:id="@+id/btn_mobile_networks"
            style="@style/errorFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/error_fragment_item_spacing"
            android:text="@string/mobile_networks" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/errorFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_" />

        <Button
            android:id="@+id/btn_exit_app"
            style="@style/errorFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

    </LinearLayout>

</LinearLayout>